@@ -23,26 +23,44 @@ import java.util.concurrent.TimeUnit;
 
 public class AutoTestUISteps {
     private RemoteWebDriver driver;
+    private Properties props;
+
+
 
     @BeforeEach
-    public void testVegetableAdd() throws MalformedURLException {
-        // Настройка ChromeOptions для Selenoid
-        ChromeOptions chromeOptions = new ChromeOptions();
-        chromeOptions.addArguments("--remote-allow-origins=*"); // Добавляем аргумент для разрешения удаленного доступа
+    void setUp() throws MalformedURLException {
+        // Загрузка настроек из файла свойств
+        props = new Properties();
+        // Пример: загрузка из файла или системных переменных
+        // props.load(new FileInputStream("config.properties"));
 
-        // Настройка DesiredCapabilities для Selenoid
-        DesiredCapabilities capabilities = new DesiredCapabilities();
-        capabilities.setCapability(ChromeOptions.CAPABILITY, chromeOptions);
+        // Определяем, где запускается тест (локально или удаленно)
+        boolean isRemote = Boolean.parseBoolean(System.getProperty("remote", "true"));
 
-        // Добавляем параметры для Selenoid
-        Map<String, Object> selenoidOptions = new HashMap<>();
-        selenoidOptions.put("enableVNC", true); // Включение VNC
-        selenoidOptions.put("enableVideo", false); // Отключение записи видео
-        capabilities.setCapability("selenoid:options", selenoidOptions);
+        if (isRemote) {
+            // Удаленный запуск через Selenoid
+            DesiredCapabilities capabilities = new DesiredCapabilities();
+            Map<String, Object> selenoidOptions = new HashMap<>();
+            selenoidOptions.put("browserName", "chrome"); // Указываем браузер
+            selenoidOptions.put("browserVersion", "109.0"); // Указываем версию браузера
+            selenoidOptions.put("enableVNC", true); // Включаем VNC
+            selenoidOptions.put("enableVideo", false); // Отключаем запись видео
+            capabilities.setCapability("selenoid:options", selenoidOptions);
 
-        // Подключение к Selenoid Hub
-        WebDriver driver = new RemoteWebDriver(new URL("http://jenkins.applineselenoid.fvds.ru:4444/wd/hub"), capabilities);
+            // Подключение к Selenoid
+            driver = new RemoteWebDriver(
+                    URI.create(props.getProperty("SELENOID_URL", "http://jenkins.applineselenoid.fvds.ru:4444/wd/hub")).toURL(),
+                    capabilities
+            );
+        } else {
+            // Локальный запуск
+            System.setProperty("webdriver.chrome.driver", "src/test/resources/chromedriver.exe");
+            driver = new ChromeDriver();
+        }
 
+        driver.manage().timeouts().pageLoadTimeout(10, TimeUnit.SECONDS);
+        driver.manage().timeouts().implicitlyWait(10, TimeUnit.SECONDS);
+        driver.manage().window().maximize();
     }
 
     @И("загрузка драйвера")
